--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.0",
+    "@types/winston": "^2.4.4",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.6.5",
+    "morgan": "^1.10.0",
+    "winston": "^3.8.2"
   },
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch src --exec 'npx' 'ts-node' src/app.ts"
+    "dev": "nodemon"
   }
 }
